correct parallax example layout on safari

--- a/examples/parallax-example/components/Intro/Intro.scss
+++ b/examples/parallax-example/components/Intro/Intro.scss
@@ -9,8 +9,7 @@
     flex-flow: row wrap;
     align-items: center;
     justify-content: center;
-    padding-top: 50vh;
-    height: 50vh;
+    height: 100vh;
 }
 
 :local(.container) {
